; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/extr_mtdpart.c_part_get_fact_prot_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/extr_mtdpart.c_part_get_fact_prot_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_info = type { i32 }
%struct.otp_info = type { i32 }
%struct.mtd_part = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.TYPE_2__*, %struct.otp_info*, i64)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtd_info*, %struct.otp_info*, i64)* @part_get_fact_prot_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @part_get_fact_prot_info(%struct.mtd_info* %0, %struct.otp_info* %1, i64 %2) #0 {
  %4 = alloca %struct.mtd_info*, align 8
  %5 = alloca %struct.otp_info*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.mtd_part*, align 8
  store %struct.mtd_info* %0, %struct.mtd_info** %4, align 8
  store %struct.otp_info* %1, %struct.otp_info** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.mtd_info*, %struct.mtd_info** %4, align 8
  %9 = call %struct.mtd_part* @PART(%struct.mtd_info* %8)
  store %struct.mtd_part* %9, %struct.mtd_part** %7, align 8
  %10 = load %struct.mtd_part*, %struct.mtd_part** %7, align 8
  %11 = getelementptr inbounds %struct.mtd_part, %struct.mtd_part* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.TYPE_2__*, %struct.otp_info*, i64)*, i32 (%struct.TYPE_2__*, %struct.otp_info*, i64)** %13, align 8
  %15 = load %struct.mtd_part*, %struct.mtd_part** %7, align 8
  %16 = getelementptr inbounds %struct.mtd_part, %struct.mtd_part* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = load %struct.otp_info*, %struct.otp_info** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i32 %14(%struct.TYPE_2__* %17, %struct.otp_info* %18, i64 %19)
  ret i32 %20
}

declare dso_local %struct.mtd_part* @PART(%struct.mtd_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
